Update linux version to 19.0.3